[gd_scene load_steps=2 format=3 uid="uid://bsaaiwbylcmtg"]

[ext_resource type="Script" path="res://Scripts/Logic/window_test.gd" id="1_kygf2"]

[node name="Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kygf2")

[node name="TitleBar" type="Panel" parent="."]
layout_mode = 0
offset_left = 311.0
offset_top = 205.0
offset_right = 1001.0
offset_bottom = 236.0

[node name="Title" type="Label" parent="TitleBar"]
layout_mode = 0
offset_left = 293.0
offset_top = 8.0
offset_right = 342.0
offset_bottom = 24.0
text = "TITLE"

[node name="CloseButton" type="Button" parent="TitleBar"]
layout_mode = 0
offset_left = 669.0
offset_top = 3.0
offset_right = 690.0
offset_bottom = 27.0
text = "x"

[node name="WindowContent" type="Control" parent="."]
anchors_preset = 0
offset_left = 319.0
offset_top = 236.0
offset_right = 1000.0
offset_bottom = 535.0

[node name="ResizeHandle" type="Control" parent="."]
anchors_preset = 0
offset_left = 313.0
offset_top = 208.0
offset_right = 353.0
offset_bottom = 248.0
